[project]
name = "zem-client-svc"
version = "0.1.0"
description = ""
authors = [
    {name = "Yuxiang Li"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi (>=0,<1)",
    "uvicorn[standard] (>=0,<1)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
