[tool.poetry]
name = "zem-client-svc"
version = "0.1.0"
description = ""
authors = ["Yuxiang Li"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"
psycopg2 = "^2.9.10"
sqlalchemy = "^2.0.38"
pandas = "^2.2.3"
isort = "^6.0.1"
black = "^25.1.0"
pydantic = "^2.10.6"
passlib = {extras = ["django"], version = "^1.7.4"}
bcrypt = "^4.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
